--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -533,7 +533,8 @@ header {
 
 .home {
     section {
-        height: 100vh;
+        min-height: 100vh;
+        height: max-content;
         width: 100%;
         display: flex;
         align-items: center;
